# Skeletux

./: CMakeLists.txt  README.md  debug  load  uload  zombies
src/: Main.cpp  Main.h  hooker.cpp  hooker.h  interfaces.cpp  interfaces.h  offsets.cpp  settings.cpp  settings.h
src/GUI/: gui.cpp  gui.h  main.xml
src/Hacks/: DisablePostProcessing.cpp  DisablePostProcessing.h  NoFog.cpp  NoFog.h  SkyBox.cpp  SkyBox.h
src/Hooks/: BeginFrame.cpp  FrameStageNotify.cpp  LockCursor.cpp  Paint.cpp  SetKeyCodeState.cpp  ShouldDrawFog.cpp  hooks.h
src/SDK/: IClientEntity.h  ICvar.h  ISurface.h  definitions.h
src/SDK/panorama/: PanoramaUIEngine.h
src/Utils/: draw.cpp  draw.h  netvarmanager.cpp  util.cpp  util.h  util_sdk.cpp  util_sdk.h
src/json/: json-forwards.h  json.h
